syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.av360.eventdings.grpc";
option java_outer_classname = "SubscribingProto";

service SubscriptionService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }

  rpc NewSubscription (Subscription) returns (SubscriptionId) {
  }

  rpc NewSubscriptions (stream Subscription) returns (stream SubscriptionId) {
  }

  rpc GetSubscription (SubscriptionId) returns (Subscription) {
  }

  rpc DeleteSubscription (SubscriptionId) returns (SubscriptionId) {
  }

  rpc DeleteSubscriptions (stream SubscriptionId) returns (stream SubscriptionId) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SubscriptionId {
  string id = 1;
}

message Subscription {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  string subscriberUri = 3;
  map<string, string> filters = 4;
}